# opengl-tut

./: .gitignore  CMakeLists.txt  README.md
src/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  main.cpp
src/Shaders/: shaderFrag.glsl  shaderVert.glsl
